<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tidepool_mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!--  Tab -->
    <string name="tab1">Monitor</string>
    <string name="tab2">Chat</string>
    <string name="tab3">Contact</string>
    <string name="tab4">Alert</string>
    <string name="tab5">Account</string>
    
    <string name="message">Message</string>
    
    <string name="date">13:10 03/09/2014</string>
    <string name="bg">175</string>
    <string name="insulin">0</string>
    
    <!-- Register -->
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phonenum">Phone number</string>
    <string name="birth">Date of Birth yyyy-mm-dd</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="patient">Patient</string>
    <string name="parent">Parent</string>
    <string name="doctor">Doctor</string>
    <string name="save">Save</string>
    <string name="action_signout">Sign Out</string>
    
    <!-- Login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="action_forgot">Forget username or password</string>
    <string name="action_register">Create an new account</string>
    
    <string name="action_signup">Sign Up</string>
    <string name="action_signin">Sign In</string>
    
    <!-- Monitor -->
	<string name="title_blood_glucose">Blood Glucose</string>
	<string name="title_insulin">Insulin</string>
	<string name="title_time">Time</string>
	<string name="change_date">Change date</string>
	<string name="change_time">Change Time</string>
	<string name="search_data">Search Data</string>
	<string name="location">Current Location</string>
	<string name="chatting">Start Chatting</string>
	<string name="date_picker_title">Choose a date</string>
	<string name="time_picker_title">Choose a time</string>
	
	<!-- Profile -->
	<string name="profile">Profile</string>
	<string name="delete">Delete</string>
	<string name="add">Add</string>
	<string name="deny">Refuse</string>
	<string name ="call">Call</string>
	
</resources>