<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DeviceFragment" >

    <TextView
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:gravity="center"
	  android:text="@string/tab5" 
	  android:textSize="30sp"
	  android:layout_marginBottom="20dp" />
	
	<EditText android:id="@+id/account_username"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginLeft="16dp"
	  android:layout_marginRight="16dp"
	  android:hint="@string/username" />
	
	<EditText android:id="@+id/account_password"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginLeft="16dp"
	  android:layout_marginRight="16dp"
	  android:hint="@string/password"
	  android:inputType="textPassword" />
	
	<EditText android:id="@+id/account_confirmpassword"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginLeft="16dp"
	  android:layout_marginRight="16dp"
	  android:hint="@string/confirm_password" 
	  android:inputType="textPassword"/>
	
	<EditText android:id="@+id/account_email"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginLeft="16dp"
	  android:layout_marginRight="16dp"
	  android:hint="@string/email"
      android:inputType="textEmailAddress" />
	
	<EditText android:id="@+id/account_phonenum"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginLeft="16dp"
	  android:layout_marginRight="16dp"
	  android:hint="@string/phonenum"
      android:inputType="phone" />
	
	<EditText android:id="@+id/account_birth"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginLeft="16dp"
	  android:layout_marginRight="16dp"
	  android:hint="@string/birth"
      android:inputType="date" />
	
	<RadioGroup
	    android:id="@+id/account_sex"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <RadioButton android:id="@+id/account_female"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/female"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/account_male"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:text="@string/male"
	        android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
	
	<RadioGroup
	    android:id="@+id/account_usertype"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:layout_marginBottom="10dp" >

	    <RadioButton android:id="@+id/account_patient"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/patient"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/account_parent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="17dp"
	        android:text="@string/parent"
	        android:onClick="onRadioButtonClicked"/>
	    <!-- <RadioButton android:id="@+id/doctor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:text="@string/doctor"
	        android:onClick="onRadioButtonClicked"/> -->
	</RadioGroup>
	
	<Button android:id="@+id/editAccount"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:text="@string/save" 
	  android:layout_marginBottom="10dp" />

	<Button android:id="@+id/signout"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:text="@string/action_signout" 
	  android:layout_marginBottom="10dp" />
</LinearLayout>