<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:background="#E0E0E0" >

    <RelativeLayout
            android:id="@+id/structured_relative_interaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom" >
             

        <EditText
            android:id="@+id/structured_edittext_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/structured_imagebutton_takePhoto"
            android:layout_margin="5dp"
            android:gravity="bottom"
            android:maxLines="5"
            android:padding="10dp"
            android:hint="@string/message"
            android:textColorHint="#B0B0B0"
            android:inputType="textCapSentences|textMultiLine" />

        <ImageButton
            android:id="@+id/structured_imagebutton_takePhoto"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/structured_edittext_answer"
            android:background="@drawable/ic_action_send" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:layout_marginLeft="60dp"
        android:textColor="@color/green"
        android:text="@string/bg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/insulin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>